--- a/web-dev.html
+++ b/web-dev.html
@@ -112,12 +112,12 @@
             </div>
 
             <div class="projects grid">
+                <a href="https://kenyyyxd.github.io/Service-Page/">
+                        <img src="img/page.jpg">
+                        <h4>Service Page</h4>
+                    </a>
                 <a href="">
                     <img src="img/soon1.jpg">
-                    <h4>Empty Project</h4>
-                </a>
-                <a href="">
-                    <img src="img/soon2.jpg">
                     <h4>Empty Project</h4>
                 </a>
             </div>
