--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
                         <h4>Wedding Invitation</h4>
                     </a>
                     <a href="">
-                        <img src="img/soon.jpg">
+                        <img src="img/soon.png">
                         <h4>Empty Project</h4>
                     </a>
                     <a href="https://www.canva.com/design/DAEYRI0rqFY/aLcP_uqCLeKSN87Rbt3R7g/edit?utm_content=DAEYRI0rqFY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
