--- a/portfolio.html
+++ b/portfolio.html
@@ -124,9 +124,9 @@
                         <img src="img/graphics/Elisha.png">
                         <h4>Wedding Invitation</h4>
                     </a>
-                    <a href="">
-                        <img src="img/soon.png">
-                        <h4>Empty Project</h4>
+                    <a href="./">
+                        <img src="img/portfolio.jpg">
+                        <h4>Portfolio Website</h4>
                     </a>
                     <a href="https://www.canva.com/design/DAEYRI0rqFY/aLcP_uqCLeKSN87Rbt3R7g/edit?utm_content=DAEYRI0rqFY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
                         <img src="img/graphics/hiring.png">
