--- a/all.html
+++ b/all.html
@@ -148,10 +148,10 @@
                     <img src="img/graphics/Margarette1.png">
                     <h4>Birthday Invitation</h4>
                 </a>
-                <a href="">
-                    <img src="img/soon1.jpg">
-                    <h4>Empty Project</h4>
-                </a>
+                <a href="./">
+                        <img src="img/portfolio.jpg">
+                        <h4>Portfolio Website</h4>
+                    </a>
                 <a href="https://www.canva.com/design/DAEYQz5jEZg/UAbLAjc9qAWevoy1T5gHtg/edit?utm_content=DAEYQz5jEZg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
                     <img src="img/graphics/hiring1.png">
                     <h4>Poster</h4>
