--- a/web-dev.html
+++ b/web-dev.html
@@ -116,10 +116,10 @@
                         <img src="img/page.jpg">
                         <h4>Service Page</h4>
                     </a>
-                <a href="">
-                    <img src="img/soon1.jpg">
-                    <h4>Empty Project</h4>
-                </a>
+                <a href="./">
+                        <img src="img/portfolio.jpg">
+                        <h4>Portfolio Website</h4>
+                    </a>
             </div>
 </section>
     
