--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
                         <img src="img/graphics/Margarette.png">
                         <h4>Birthday Invitation</h4>
                     </a>
-                    <a href="https://kenyyyxd.github.io/Service-Page/">
+                    <a href="https://kenyyyxd.github.io/Serano/">
                         <img src="img/page.jpg">
                         <h4>Service Page</h4>
                     </a>
