--- a/web-dev.html
+++ b/web-dev.html
@@ -112,7 +112,7 @@
             </div>
 
             <div class="projects grid">
-                <a href="https://kenyyyxd.github.io/Service-Page/">
+                <a href="https://kenyyyxd.github.io/Serano/">
                         <img src="img/page.jpg">
                         <h4>Service Page</h4>
                     </a>
