--- a/all.html
+++ b/all.html
@@ -134,7 +134,7 @@
                 </a>
                 <a href="https://kenyyyxd.github.io/Serano/">
                         <img src="img/page.jpg">
-                        <h4>Service Page</h4>
+                        <h4>Service Page<br>(not responsive)</h4>
                     </a>
                 <a href="https://www.canva.com/design/DAEYRI0rqFY/aLcP_uqCLeKSN87Rbt3R7g/edit?utm_content=DAEYRI0rqFY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
                     <img src="img/graphics/hiring.png">
