--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,7 @@
                     </a>
                     <a href="https://kenyyyxd.github.io/Serano/">
                         <img src="img/page.jpg">
-                        <h4>Service Page</h4>
+                        <h4>Service Page<br>(not responsive)</h4>
                     </a>
                     <a href="https://www.canva.com/design/DAEcSLbevoI/icsyN2ofNZepI3ex-a9Jpw/edit?utm_content=DAEcSLbevoI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
                         <img src="img/graphics/Elisha.png">
