--- a/web-dev.html
+++ b/web-dev.html
@@ -114,7 +114,7 @@
             <div class="projects grid">
                 <a href="https://kenyyyxd.github.io/Serano/">
                         <img src="img/page.jpg">
-                        <h4>Service Page</h4>
+                        <h4>Service Page<br>(not responsive)</h4>
                     </a>
                 <a href="./">
                         <img src="img/portfolio.jpg">
