--- a/web-dev.html
+++ b/web-dev.html
@@ -120,6 +120,10 @@
                         <img src="img/portfolio.jpg">
                         <h4>Portfolio Website</h4>
                     </a>
+                <a href="https://kenyyyxd.github.io/devChallenges-Alarado/">
+                        <img src="img/simple.png">
+                        <h4>Responsive HomePage<br>Alarado</h4>
+                    </a>
             </div>
 </section>
     
