--- a/all.html
+++ b/all.html
@@ -140,6 +140,10 @@
                     <img src="img/graphics/hiring.png">
                     <h4>Poster</h4>
                 </a>
+                <a href="https://kenyyyxd.github.io/devChallenges-Alarado/">
+                        <img src="img/simple.png">
+                        <h4>Responsive HomePage<br>Alarado</h4>
+                    </a>
                 <a href="https://www.canva.com/design/DAEbrzQAcSY/n8yTkafgc5adnj-VKjdcVA/edit?utm_content=DAEbrzQAcSY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
                     <img src="img/graphics/carl1.png">
                     <h4>Birthday Invitation</h4>
