--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Page Application</title>
+    <title>Portfolio | Ken Acuna</title>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" type="x-icon" href="img/bean.png" />
