--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
   
             <div class="border0"></div>
             <div class="socials">
-              <a href="https://www.facebook.com/kenacuna13/"
+              <a href="https://www.facebook.com/kenacuna13/" target="_blank" rel="noopener noreferrer"
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
-              <a href="https://www.linkedin.com/in/kaacuna13/"
+              <a href="https://www.linkedin.com/in/kaacuna13/" target="_blank" rel="noopener noreferrer"
                 ><i class="fa-brands fa-linkedin-in"></i
               ></a>
-              <a href="https://x.com/_KenAcuna"
+              <a href="https://x.com/_KenAcuna" target="_blank" rel="noopener noreferrer"
                 ><i class="fa-brands fa-x-twitter"></i
               ></a>
-              <a href="https://github.com/Kenyyyxd"
+              <a href="https://github.com/Kenyyyxd" target="_blank" rel="noopener noreferrer"
                 ><i class="fa-brands fa-github"></i
               ></a>
             </div>
