--- a/portfolio.html
+++ b/portfolio.html
@@ -28,21 +28,25 @@
               <img src="img/page.jpg"/>
               <h4>Web Development</h4>
             </a>
-            <a href="https://www.canva.com/design/DAEcSlkHRJc/d_R0_1PxVKfV2QrGB3ea7w/edit?utm_content=DAEcSlkHRJc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <img src="img/bryan.jpg" />
-              <h4>Graphic Design</h4>
-            </a>
             <a href="https://kenyyyxd.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">
               <img src="img/portfolio.jpg" />
               <h4>Web Development</h4>
             </a>
-            <a href="https://www.canva.com/design/DAEbrozvRfk/4cNgVg2SNjZMSsWLkkBqUg/edit?utm_content=DAEbrozvRfk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <img src="img/marga.jpg" />
-              <h4>Graphic Design</h4>
+            <a href="https://kenyyyxd.github.io/Coffee-Listing/" target="_blank" rel="noopener noreferrer">
+              <img src="img/coffee.jpg" />
+              <h4>Web Development</h4>
             </a>
             <a href="https://kenyyyxd.github.io/devChallenges-Alarado/" target="_blank" rel="noopener noreferrer">
               <img src="img/alarado.jpg" />
               <h4>Web Development</h4>
+            </a>
+            <a href="https://www.canva.com/design/DAEcSlkHRJc/d_R0_1PxVKfV2QrGB3ea7w/edit?utm_content=DAEcSlkHRJc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
+              <img src="img/bryan.jpg" />
+              <h4>Graphic Design</h4>
+            </a>
+            <a href="https://www.canva.com/design/DAEbrozvRfk/4cNgVg2SNjZMSsWLkkBqUg/edit?utm_content=DAEbrozvRfk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
+              <img src="img/marga.jpg" />
+              <h4>Graphic Design</h4>
             </a>
             <a href="">
               <img src="img/soon.png" />
