--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               <h4>Web Development</h4>
             </a>
             <a href="https://kenyyyxd.github.io/Coffee-Listing/" target="_blank" rel="noopener noreferrer">
-              <img src="img/coffee.jpg" />
+              <img src="img/cafe.jpg" />
               <h4>Web Development</h4>
             </a>
             <a href="https://kenyyyxd.github.io/devChallenges-Alarado/" target="_blank" rel="noopener noreferrer">
