--- a/about.html
+++ b/about.html
@@ -12,7 +12,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@50,100,0,0" />
     <script src="https://kit.fontawesome.com/68feb68111.js" crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J2LWPQE0F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6J2LWPQE0F');
+</script>
 </head>
 
 <body>
@@ -28,7 +38,7 @@
             strong foundation in both design and development, I craft visually
             compelling and highly functional digital experiences.<br /><br />
             I believe that great design is about more than just looking
-            good—it's about solving problems and enhancing interactions. I
+            good, it's about solving problems and enhancing interactions. I
             invite you to explore my portfolio and see how my blend of technical
             proficiency and artistic vision can elevate your next project.<br /><br />
             Let's create something extraordinary together!
@@ -36,7 +46,9 @@
         </div>
         <h2>What I Do</h2>
         <div class="web-design">
-          <i class="fa-regular fa-pen-to-square"></i>
+          <span class="material-symbols-outlined">
+            view_quilt
+            </span>
           <h3>Web Design</h3>
           <p>
             The most modern and high-quality design made at a professional
@@ -45,13 +57,17 @@
         </div>
 
         <div class="web-development">
-          <i class="fa-solid fa-code"></i>
+          <span class="material-symbols-outlined">
+            code
+            </span>
           <h3>Web Development</h3>
           <p>High-quality development of sites at the professional level.</p>
         </div>
 
         <div class="graphic-design">
-          <i class="fa-solid fa-palette"></i>
+          <span class="material-symbols-outlined">
+            draw
+            </span>
           <h3>Graphic Design</h3>
           <p>High-quality and eye-catching graphics.</p>
         </div>
