--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                   ></textarea>
                 </div>
   
-                <button class="sendMessage-btn">Send Message</button>
+                <button class="sendMessage-btn"><i class="fa-regular fa-paper-plane"></i>Send Message</button>
               </div>
             </form>
           </div>
