--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio | Ken Acuña</title>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="x-icon" href="img/K.jpg" />
+    <link rel="icon" id="dynamic-favicon" href="img/icon/3-4.png" type="image/png">
     <link href="https://fonts.cdnfonts.com/css/brittany-signature" rel="stylesheet" />
     <link href="https://fonts.cdnfonts.com/css/mightyspidey" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
