--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,18 @@
 
           <div class="projects grid">
 
+              <a href="https://kenyyyxd.github.io/Easybank/" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail"><img src="img/easybank.jpg"/></div>
+              <h4>Easybank</h4>
+              <p>Web Development</p>
+            </a>
+
+            <a href="https://kenyyyxd.github.io/Sunnyside/" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail"><img src="img/sunnyside.jpg"/></div>
+              <h4>Sunnyside</h4>
+              <p>Web Development</p>
+            </a>
+
             <a href="https://kenyyyxd.github.io/Serano/" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail"><img src="img/page.jpg"/></div>
               <h4>Serano</h4>
@@ -67,7 +79,7 @@
             </a>
             <a href="">
               <div class="thumbnail"><img src="img/soon.png" /></div>
-              <h4>&#129313;</h4>
+              <h4>...</h4>
               <p>Web Design</p>
             </a>
             <a href="https://www.canva.com/design/DAEcSLbevoI/icsyN2ofNZepI3ex-a9Jpw/edit?utm_content=DAEcSLbevoI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
