--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio | Ken Acuña</title>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" id="dynamic-favicon" href="img/icon/3-4.png" type="image/png">
+    <link rel="icon" id="dynamic-favicon" href="img/icons/" type="image/png">
     <link href="https://fonts.cdnfonts.com/css/brittany-signature" rel="stylesheet" />
     <link href="https://fonts.cdnfonts.com/css/mightyspidey" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,23 +14,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
     <script src="https://kit.fontawesome.com/68feb68111.js" crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6J2LWPQE0F"></script>
-    
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-6J2LWPQE0F');
-</script>
 </head>
 <body>
-  <div class="switch-container">
-    <label class="switch">
-        <input type="checkbox" id="themeToggle">
-        <span class="slider"></span>
-    </label>
-</div>
-
+  
     <section id="welcome">
         <div class="grid">
           <input type="checkbox" id="check" />
@@ -119,56 +106,5 @@
 
     <div id="content"></div>
     
-    <div class="counter-container">
-      <p>You are visitor number: <span id="visitor-count" class="number">💤💤</span></p>
-  </div>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
-    import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDz-_7Cx8nX1TDLmUywTrFhVmn25aIsVyY",
-      authDomain: "website-visitors-ec304.firebaseapp.com",
-      databaseURL: "https://website-visitors-ec304-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "website-visitors-ec304",
-      storageBucket: "website-visitors-ec304.appspot.com",
-      messagingSenderId: "546958891240",
-      appId: "1:546958891240:web:681f095ffde8c27bda115d",
-      measurementId: "G-JFKP8N3V42"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const visitorCountRef = ref(db, 'visitorCount');
-
-    if (!localStorage.getItem('hasVisited')) {
-
-        get(visitorCountRef).then((snapshot) => {
-            if (snapshot.exists()) {
-                let currentCount = snapshot.val();
-                document.getElementById('visitor-count').innerText = currentCount;
-                set(visitorCountRef, currentCount + 1); 
-            } else {
-                set(visitorCountRef, 1);
-                document.getElementById('visitor-count').innerText = 1;
-            }
-        }).catch((error) => {
-            console.error("Error getting visitor count:", error);
-        });
-
-        localStorage.setItem('hasVisited', 'true');
-    } else {
-
-        get(visitorCountRef).then((snapshot) => {
-            if (snapshot.exists()) {
-                let currentCount = snapshot.val();
-                document.getElementById('visitor-count').innerText = currentCount;
-            }
-        }).catch((error) => {
-            console.error("Error getting visitor count:", error);
-        });
-    }
-  </script>
 </body>
 </html>
