--- a/portfolio.html
+++ b/portfolio.html
@@ -6,24 +6,6 @@
     <title>Portfolio | Ken Acuna</title>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="x-icon" href="img/bean.png" />
-    <link href="https://fonts.cdnfonts.com/css/brittany-signature" rel="stylesheet" />
-    <link href="https://fonts.cdnfonts.com/css/mightyspidey" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
-    <script src="https://kit.fontawesome.com/68feb68111.js" crossorigin="anonymous"></script>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J2LWPQE0F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-6J2LWPQE0F');
-</script>
 </head>
 <body>
     <div id="content">
@@ -35,65 +17,89 @@
 
           <div class="projects grid">
 
-              <a href="https://kenyyyxd.github.io/Easybank/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/easybank.jpg"/></div>
+            <a href="https://kenyyyxd.github.io/Easybank/" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail"><img src="img/easybank.jpg"/>
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+              </div>
               <h4>Easybank</h4>
               <p>Web Development</p>
             </a>
 
             <a href="https://kenyyyxd.github.io/Sunnyside/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/sunnyside.jpg"/></div>
+              <div class="thumbnail"><img src="img/sunnyside.jpg"/>
+                <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+              </div>
               <h4>Sunnyside</h4>
               <p>Web Development</p>
             </a>
 
             <a href="https://kenyyyxd.github.io/Serano/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/page.jpg"/></div>
+              <div class="thumbnail"><img src="img/page.jpg"/>
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Serano</h4>
               <p>Web Development</p>
             </a>
             <a href="https://kenyyyxd.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/portfolio.jpg" /></div>
+              <div class="thumbnail"><img src="img/portfolio.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Portfolio</h4>
               <p>Web Development</p>
             </a>
             <a href="https://kenyyyxd.github.io/Coffee-Listing/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/cafe.jpg" /></div>
+              <div class="thumbnail"><img src="img/cafe.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Coffee Listing</h4>
               <p>Web Development</p>
             </a>
             <a href="https://kenyyyxd.github.io/devChallenges-Alarado/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/alarado.jpg" /></div>
+              <div class="thumbnail"><img src="img/alarado.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Alarado</h4>
               <p>Web Development</p>
             </a>
             <a href="https://www.canva.com/design/DAEcSlkHRJc/d_R0_1PxVKfV2QrGB3ea7w/edit?utm_content=DAEcSlkHRJc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/bryan.jpg" /></div>
+              <div class="thumbnail"><img src="img/bryan.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Invitation Card</h4>
               <p>Graphic Design</p>
             </a>
             <a href="https://www.canva.com/design/DAEbrozvRfk/4cNgVg2SNjZMSsWLkkBqUg/edit?utm_content=DAEbrozvRfk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/marga.jpg" /></div>
+              <div class="thumbnail"><img src="img/marga.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Invitation Card</h4>
               <p>Graphic Design</p>
             </a>
             <a href="">
-              <div class="thumbnail"><img src="img/soon.png" /></div>
+              <div class="thumbnail"><img src="img/soon.png" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>...</h4>
               <p>Web Design</p>
             </a>
             <a href="https://www.canva.com/design/DAEcSLbevoI/icsyN2ofNZepI3ex-a9Jpw/edit?utm_content=DAEcSLbevoI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/bryan2.jpg" /></div>
+              <div class="thumbnail"><img src="img/bryan2.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Invitation Card</h4>
               <p>Graphic Design</p>
             </a>
             <a href="https://www.canva.com/design/DAEbrzQAcSY/n8yTkafgc5adnj-VKjdcVA/edit?utm_content=DAEbrzQAcSY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/carl.jpg" /></div>
+              <div class="thumbnail"><img src="img/carl.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Invitation Card</h4>
               <p>Graphic Design</p>
             </a>
             <a href="https://www.canva.com/design/DAEbrx4ceec/6lqGfpUe20meR3Lf8cj4oQ/edit?utm_content=DAEbrx4ceec&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/carl2.jpg" /></div>
+              <div class="thumbnail"><img src="img/carl2.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
               <h4>Invitation Card</h4>
               <p>Graphic Design</p>
             </a>
