--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,14 @@
 
           <div class="projects grid">
 
+            <a href="https://kenyyyxd.github.io/Serano-Services/" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail"><img src="img/thumbnail.jpg"/>
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+              </div>
+              <h4>Services Page</h4>
+              <p>Web Development</p>
+            </a>
+
             <a href="https://kenyyyxd.github.io/Easybank/" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail"><img src="img/easybank.jpg"/>
               <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
@@ -61,6 +69,13 @@
               <h4>Alarado</h4>
               <p>Web Development</p>
             </a>
+            <a href="https://www.figma.com/design/jUyU83rLarhJnEmRojpaVH/Portfolio?m=auto&t=rIrefJnKUpFQ2eUh-1" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail"><img src="img/web-design.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
+              <h4>Graphic Web Design</h4>
+              <p>Web Design</p>
+            </a>
             <a href="https://www.canva.com/design/DAEcSlkHRJc/d_R0_1PxVKfV2QrGB3ea7w/edit?utm_content=DAEcSlkHRJc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail"><img src="img/bryan.jpg" />
               <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
@@ -74,13 +89,6 @@
             </div>
               <h4>Invitation Card</h4>
               <p>Graphic Design</p>
-            </a>
-            <a href="">
-              <div class="thumbnail"><img src="img/soon.png" />
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>...</h4>
-              <p>Web Design</p>
             </a>
             <a href="https://www.canva.com/design/DAEcSLbevoI/icsyN2ofNZepI3ex-a9Jpw/edit?utm_content=DAEcSLbevoI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail"><img src="img/bryan2.jpg" />
