--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
               <p>Web Development</p>
             </a>
             <a href="https://kenyyyxd.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/portfolio.jpg" />
+              <div class="thumbnail"><img src="img/red.jpg" />
               <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
             </div>
               <h4>Portfolio</h4>
