--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,14 @@
 
           <div class="projects grid">
 
+              <a href="https://kenyyyxd.github.io/NewsHomepage/" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail"><img src="img/news.jpg"/>
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+              </div>
+              <h4>News Homepage</h4>
+              <p>Web Development</p>
+            </a>
+
             <a href="https://kenyyyxd.github.io/Serano-Services/" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail"><img src="img/thumbnail.jpg"/>
               <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
@@ -40,14 +48,7 @@
               <h4>Sunnyside</h4>
               <p>Web Development</p>
             </a>
-
-            <a href="https://kenyyyxd.github.io/Serano/" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/page.jpg"/>
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>Serano</h4>
-              <p>Web Development</p>
-            </a>
+              
             <a href="https://kenyyyxd.github.io/Portfolio/" target="_blank" rel="noopener noreferrer">
               <div class="thumbnail"><img src="img/red.jpg" />
               <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
@@ -69,49 +70,7 @@
               <h4>Alarado</h4>
               <p>Web Development</p>
             </a>
-            <a href="https://www.figma.com/design/jUyU83rLarhJnEmRojpaVH/Portfolio?m=auto&t=rIrefJnKUpFQ2eUh-1" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/web-design.jpg" />
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>Graphic Web Design</h4>
-              <p>Web Design</p>
-            </a>
-            <a href="https://www.canva.com/design/DAEcSlkHRJc/d_R0_1PxVKfV2QrGB3ea7w/edit?utm_content=DAEcSlkHRJc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/bryan.jpg" />
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>Invitation Card</h4>
-              <p>Graphic Design</p>
-            </a>
-            <a href="https://www.canva.com/design/DAEbrozvRfk/4cNgVg2SNjZMSsWLkkBqUg/edit?utm_content=DAEbrozvRfk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/marga.jpg" />
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>Invitation Card</h4>
-              <p>Graphic Design</p>
-            </a>
-            <a href="https://www.canva.com/design/DAEcSLbevoI/icsyN2ofNZepI3ex-a9Jpw/edit?utm_content=DAEcSLbevoI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/bryan2.jpg" />
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>Invitation Card</h4>
-              <p>Graphic Design</p>
-            </a>
-            <a href="https://www.canva.com/design/DAEbrzQAcSY/n8yTkafgc5adnj-VKjdcVA/edit?utm_content=DAEbrzQAcSY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/carl.jpg" />
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>Invitation Card</h4>
-              <p>Graphic Design</p>
-            </a>
-            <a href="https://www.canva.com/design/DAEbrx4ceec/6lqGfpUe20meR3Lf8cj4oQ/edit?utm_content=DAEbrx4ceec&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer">
-              <div class="thumbnail"><img src="img/carl2.jpg" />
-              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
-            </div>
-              <h4>Invitation Card</h4>
-              <p>Graphic Design</p>
-            </a>
-
+            
           </div>
         </section>
     </div>
