--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,13 @@
               <h4>Alarado</h4>
               <p>Web Development</p>
             </a>
+            <a href="https://www.figma.com/design/jUyU83rLarhJnEmRojpaVH/Portfolio?m=auto&t=rIrefJnKUpFQ2eUh-1" target="_blank" rel="noopener noreferrer">
+              <div class="thumbnail"><img src="img/web-design.jpg" />
+              <div class="overlay-text"><i class="fa-solid fa-eye"></i></div>
+            </div>
+              <h4>Graphic Web Design</h4>
+              <p>Web Design</p>
+            </a>
             
           </div>
         </section>
